--- a/style.css
+++ b/style.css
@@ -1,31 +1,35 @@
-body{
-    margin: 0;
+body
+{
     font-family: 'Inter','Courier New', Courier, monospace;
+    padding-bottom: 50px;
 }
 
-p{
-    margin: auto;
-    width: 100%;
-    height: 100%;
-    padding: 20px 15px 30px 30px;
+*
+{
+ margin: 0;
+ padding: 0;
+}
+
+.container
+{
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 .background-image-overlay{
-    margin: auto;
-    background-image: url("/Users/jaylabullard/Pictures/IMG_6763.jpeg");
+    background-image: url("Resources/IMG_6763.jpeg");
     background-size: cover;
     background-position: center;
-    position: relative;
     display: block;
     height: 300px;
 }
+
 .background-image-text-title{
-    margin: auto;
     text-align: center;
-    padding-top: 50px;
-    padding-bottom: 20px;
+    padding: 100px 10px 20px;
+    margin: 20px 8px 10px;
     color: rgb(236, 255, 252);
-    font-size: 50px;
+    font-size: 35px;
 }
 
 .background-image-text{
@@ -36,28 +40,67 @@ p{
     color: rgb(236, 255, 252);
     font-size: 20px;
 }
-
+.bio
+{
+    box-sizing: border-box;
+    padding: 5px 35px;
+    margin: 20px 0;
+}
 .bio-text{
     margin: auto;
     width: 100%;
     height: 100%;
-    padding: 30px 15px 20px 30px;
+    margin-top: 20px;
+    margin-bottom: 50px; 
+    padding: 5px 5px 50px;
 }
 
 li {
     display: inline;
     text-align: center;
     text-decoration: none;
-    padding: 20px 20px 20px 20px;
+    padding: 20px;
     margin-right: 90;
     margin-left: 90;
+    margin: 5px;
     font-size: 25px;
 }
-.menu-nav{
-    margin: 0;
-    padding: 0;
+
+.nav-menu{
     text-align: center;
     background-color: rgb(194,216,229);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    transition: all 0.3s ease-in-out;
+}
+
+.nav-menu .container
+{
+    display: flex;
+    padding: 10px 0;
+    transition: all 0.3s ease-in-out;
+}
+
+.nav-menu.active
+{ 
+background-color: rgb(255,255,255);
+box-shadow: 0 10px 10px rgb(0,0,0, 0.2);
+}
+
+.nav-menu.active a {
+    color: rgb(0,0,0, 0.3);
+}
+
+.nav-menu.active .container
+{
+    padding: 2px 0;
+}
+
+.nav-menu a:hover{
+    color: rgb(110, 111, 112);
+    font-weight: bold;
 }
 
 .menu-list li a{
@@ -69,7 +112,8 @@ li {
     text-align: center;
     font-size: 20px;
     border: 4px solid none;
-    box-shadow: 5px 4px 10px rgba(194, 216, 229, .4)
+    box-shadow: 5px 4px 10px rgba(194, 216, 229, .4);
+    transition: all 0.3s ease-in-out;
 }
 
 .header{
@@ -80,12 +124,17 @@ li {
     text-align: left;
 }
 
-.header-title{
+/* .header-title{
     color: rbg(0,0,0);
     text-transform: uppercase;
     margin: auto;
     font-size: 200;
-}
+    position: fixed;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    margin: 15px 0;
+} */
+
 .menu{
     color: rbg(0,0,0);
     text-transform: uppercase;
@@ -100,20 +149,30 @@ li {
     display: inline-block;
 }
 
-.footer{
+.footer
+{
     margin: auto;
-    width: 100%;
+    position: relative;
+    display: block;
+    height: 300px;
+    width: 100vw;
     background-color: rgb(194,216,229);
+}
+.footer-header{
+    /* margin: auto; */
+    padding: 20px;
+    /* width: 100vw; */
     text-align: center;
 }
    
 
 .footer-nav {
-    margin: auto;
+    /* margin: auto; */
     height: 250px;
     width: 100%;
     padding-top: 50px;
     padding-bottom: 20px;
     background-color: rgb(194,216,229);
     text-align: center;
+    list-style-type: none;
 }
