--- a/style.css
+++ b/style.css
@@ -201,6 +201,7 @@ box-shadow: 0 10px 10px rgb(0,0,0, 0.2);
     text-align: center;
     color: rgb(0, 0, 0, 0.5);
     text-transform: uppercase;
+    text-decoration: underline;
 }
    
 .footer-nav {
@@ -216,7 +217,7 @@ box-shadow: 0 10px 10px rgb(0,0,0, 0.2);
 
 .footer-icons a
 {
-    display: inline-block;
+    display: grid;
     justify-content: right;
     padding: 20px 20px;
 }
