--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body
     padding-bottom: 15px;
 }
 
+/* Header */
 .background-image-overlay{
     background-image: url("Pics/IMG_6763.jpeg");
     background-size: cover;
@@ -41,24 +42,10 @@ body
     color: rgb(236, 255, 252);
     font-size: 20px;
 }
-.bio
-{
-    box-sizing: border-box;
-    padding: 5px 35px;
-    margin: 20px 0;
-}
-.bio-text{
-    margin: auto;
-    width: 100%;
-    height: 100%;
-    margin-top: 20px;
-    margin-bottom: 50px; 
-    padding: 5px 5px 50px;
-}
 
 li {
     display: inline;
-    text-align: center;
+    text-align: right;
     text-decoration: none;
     padding: 20px;
     margin-right: 90;
@@ -68,13 +55,14 @@ li {
 }
 
 .nav-menu{
-    text-align: center;
+    text-align: right;
     background-color: rgb(194,216,229);
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
     transition: all 0.3s ease-in-out;
+    justify-content: left;
 }
 
 .nav-menu .container
@@ -118,19 +106,24 @@ box-shadow: 0 10px 10px rgb(0,0,0, 0.2);
 }
 
 .header{
-    margin: 0;
-    height: 100%;
+    height: var(--header-height);
     width: 100%;
     background-color: rbg(250,235,215);
-    text-align: left;
+    z-index: var(--zindex-header);
+
+}
+.header-title div
+{
+    display: block;
 }
 
-.header-title{
-    margin: auto;
-    color: rgb(0, 0, 0, 0.5);
+.header-title h1{
+    color: rgb(0, 0, 0);
     text-transform: uppercase;
-    display: inline-flexblock;
-    padding: 0 20px;
+    position: fixed;
+    z-index: 1;
+    flex-shrink: 0;
+    font-size: 30px;
 }
 
 .menu{
@@ -144,7 +137,30 @@ box-shadow: 0 10px 10px rgb(0,0,0, 0.2);
     margin: 0;
     padding: 0;
     overflow: hidden;
-    display: inline-flexblock;
+    align-items: center;
+    z-index: 2;
+}
+
+.menu-item
+{
+    display: inline-block;
+    margin-bottom: 0;
+    margin-left: var(--space-md);
+}
+/* About Me */
+.bio
+{
+    box-sizing: border-box;
+    padding: 5px 35px;
+    margin: 20px 0;
+}
+.bio-text{
+    margin: auto;
+    width: 100%;
+    height: 100%;
+    margin-top: 20px;
+    margin-bottom: 50px; 
+    padding: 5px 5px 50px;
 }
 
 /* Skills */
@@ -185,7 +201,6 @@ box-shadow: 0 10px 10px rgb(0,0,0, 0.2);
 }
 
 /* Footer */
-
 .footer
 {
     margin: auto;
@@ -221,3 +236,4 @@ box-shadow: 0 10px 10px rgb(0,0,0, 0.2);
     justify-content: right;
     padding: 20px 20px;
 }
+    
