--- a/style.css
+++ b/style.css
@@ -152,6 +152,8 @@ box-shadow: 0 10px 10px rgb(0,0,0, 0.2);
     padding-top: 20px;
     padding-bottom: 10px;
     font-size: 45px;
+    animation: fadeIn linear 4s;
+    -webkit-animation: fadeIn linear 4s;
 }
 /* About Me */
 
@@ -162,20 +164,13 @@ box-shadow: 0 10px 10px rgb(0,0,0, 0.2);
     grid-template-columns: 1fr 4fr;
     padding: 20px 80px;
     margin: 20px 20px;
-    transform: translateY();
-    transition: transform 5s ease;
+    animation: fadeIn linear 4s;
+  -webkit-animation: fadeIn linear 4s;
 }
-
-.about-section.show 
-{
-    transform: translateY();
-}
-
-.about-section.hide 
-{
-    display: none;
-}
-
+@keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+  }
 
 p.about-text{
     align-self: baseline;
@@ -216,8 +211,26 @@ img.bio_pic
     width: 65%;
     align-items: baseline;
     justify-content: center;
+    opacity: 0;
+    transform: translate();
+    transition: 2s;
 }
 
+.project-card.visible
+{
+    opacity: 1;
+    transition: translate(0,0);
+}
+
+.project-card.hide
+{
+    opacity: 0;
+}
+
+/* @keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+} */
 .card_grid
 {
     display: grid;
