--- a/style.css
+++ b/style.css
@@ -16,6 +16,33 @@ body
     padding-bottom: 15px;
 }
 
+.links
+{
+    padding: 10px;
+    display: flex;
+}
+
+.links a 
+{
+    display: inline-block;
+    text-align: center;
+    border: 2px solid rgb(194,216,229);
+    border-radius: 10px;
+    color: rgb(145, 143, 143);
+    background-color: rgb(245, 245, 245);
+    width: 200px;
+    text-decoration: none;
+    font-size: 20px;
+    padding: 5px;
+    margin: 10px;
+}
+
+.links a:hover
+{
+    border: 2px solid rgb(145, 143, 143);
+    color: rgb(194,216,229);
+}
+
 /* Header */
 video
 {
@@ -150,9 +177,9 @@ box-shadow: 0 10px 10px rgb(0,0,0, 0.2);
 .container h2
 {
     text-align: center;
-    padding-top: 20px;
+    padding-top: 50px;
     padding-bottom: 10px;
-    font-size: 45px;
+    font-size: 35px;
     animation: fadeIn linear 4s;
     -webkit-animation: fadeIn linear 4s;
 }
@@ -165,8 +192,8 @@ box-shadow: 0 10px 10px rgb(0,0,0, 0.2);
     grid-template-columns: 1fr 4fr;
     padding: 20px 80px;
     margin: 20px 20px;
-    animation: fadeIn linear 4s;
-  -webkit-animation: fadeIn linear 4s;
+    animation: fadeIn linear 2.5s;
+  -webkit-animation: fadeIn linear 2.5s;
 }
 @keyframes fadeIn {
     0% {opacity:0;}
@@ -195,9 +222,6 @@ img.bio_pic
     padding: 20px 50px;
 }
 
-
-/* Skills */
-
 /* Projects */
 .project-card
 {
@@ -214,7 +238,7 @@ img.bio_pic
     justify-content: center;
     opacity: 0;
     transform: translate();
-    transition: 2s;
+    transition: 5s;
 }
 
 .project-card.visible
@@ -243,7 +267,7 @@ img.bio_pic
 .card-title
 {
     text-align: center;
-    font-size: 35px;
+    font-size: 25px;
     color: rgb(145, 143, 143);
 }
 .video
@@ -295,6 +319,13 @@ p.card-desc
 .projects.hide 
 {
     display: none;
+}
+/* Resume */
+.resume 
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 /* Footer */
