--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ video
 
 .text_overlay
 {
-   transform: translate(-50%, -50%); 
+   transform: translate(-50%, -80%); 
    color: rgb(245, 245, 245);
    position: absolute;
    mix-blend-mode: overlay;
@@ -80,18 +80,19 @@ video
    padding: 180px 0;
    top: 50%;
    left: 50%;
+   max-height: 5%;
 }
 
 .background-image-text-title{
     font-size: 75px;
     padding-bottom: 50px;
-    transform: translateY(-70px);
+    transform: translateY(-90px);
 }
 
 .background-image-text{
     font-size: 30px;
     opacity: 75%;
-    transform: translateY(-50px);
+    transform: translateY(-100px);
 }
 
 li {
