--- a/style.css
+++ b/style.css
@@ -62,6 +62,8 @@ video
 {
     position: static;
     width: 100vw;
+    padding-top: 31px;
+    padding-bottom: 20px;
 }
 .overlay_video_content
 {
@@ -345,6 +347,8 @@ p.card-desc
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 75px;
+
 }
 
 /* Footer */
@@ -359,11 +363,11 @@ p.card-desc
 }
 
 .footer-header{
-    padding: 20px;
     text-align: center;
-    color: rgb(0, 0, 0, 0.5);
-    text-transform: uppercase;
-    text-decoration: underline;
+    padding-top: 50px;
+    padding-bottom: 10px;
+    font-size: 35px;
+
 }
    
 .footer-nav {
